<resources>
    <string name="app_name">App de Noticias Adm</string>
    <string name="main_title">Escreva uma notícia</string>
    <string name="hint_title">Título</string>
    <string name="hint_news_description">Escreva sua notícia</string>
    <string name="hint_publish_date">Data de publicação</string>
    <string name="hint_author">Autor</string>
    <string name="txt_button_publish">Publicar Notícia</string>
    <string name="error_missing_fields">Preencha todos os campos</string>
    <string name="info_news_published">Notícia publicada com sucesso!</string>
</resources>