<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/teal_200"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/editNewsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title"
        android:maxLines="1"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <EditText
        android:id="@+id/editNewsDescription"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/hint_news_description"
        android:padding="15dp"
        android:background="@color/white"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <EditText
        android:id="@+id/editPublishDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_publish_date"
        android:padding="15dp"
        android:background="@color/white"
        android:maxLength="10"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <EditText
        android:id="@+id/editAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_author"
        android:padding="15dp"
        android:background="@color/white"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />
    
    <Button
        android:id="@+id/btnPublishNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:text="@string/txt_button_publish"
        android:textColor="@color/white"
        android:padding="15dp"
        android:backgroundTint="@color/teal_500"
        android:layout_margin="20dp"
        />

</LinearLayout>
</ScrollView>